fix whitespace problem

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,7 +20,8 @@ $feedPadding: 7px;
 }
 
 .ionic-scroll.has-header.has-tabs {
-  bottom: 195px;
+  bottom: 130px;
+  border-bottom: 1px solid #E3E3E3;
 }
 
 .list {
