--- a/www/css/style.css
+++ b/www/css/style.css
@@ -37,7 +37,8 @@ input, button {
 }
 
 .ionic-scroll.has-header.has-tabs {
-  bottom: 195px;
+  bottom: 130px;
+  border-bottom: 1px solid #E3E3E3;
 }
 
 .list {
